Address sonar issues and update unit tests